<resources>
	<string name="app_name">Decisions</string>
	<string name="issues">Issues</string>
	<string name="arguments">Pros and cons</string>
	<string name="recommendation">Recommendation</string>
	<string name="just_now">Just now</string>
	<string name="find_arguments">Write down all the arguments.\n\nRate each negative argument with a red number from the left side and each positive argument with a green number from the right side.\n\nThe higher the number, the more important is the argument.\n\nThe scale points to Yes if the sum of the positive arguments is at least twice as high as the sum of the negative ones.</string>
	<string name="yes">Yes</string>
	<string name="maybe">Maybe</string>
	<string name="no">No</string>
	<string name="negative_sum">Cons</string>
	<string name="positive_sum">Pros</string>
	<string name="move_up">Move up</string>
	<string name="move_down">Move down</string>
	<string name="save_argument">Enter argument</string>
	<string name="remove_argument">Remove</string>
	<string name="really_remove_argument">Remove argument?</string>
	<string name="really_remove_issue">Remove issue?</string>
	<string name="cancel_editing">Cancel</string>
	<string name="sort_arguments">Sort arguments</string>
	<string name="unsort_arguments">Restore input order</string>
	<string name="share_arguments">Share</string>
	<string name="share_as">Share as</string>
	<string name="share_as_text">Text</string>
	<string name="share_as_csv">CSV</string>
	<string name="header_pros">Pros</string>
	<string name="header_neutral">Neutral</string>
	<string name="header_cons">Cons</string>
	<string name="add_issue">Add issue</string>
	<string name="duplicate_issue">Duplicate issue</string>
	<string name="remove_issue">Remove issue</string>
	<string name="edit_issue">Edit issues name</string>
	<string name="no_issues_saved">No issues yet.</string>
	<string name="enter_name">Enter a new name</string>
	<string name="enter_name_hint">What\'s it about?</string>
	<string name="preferences">Preferences</string>
	<string name="appearance_category">APPEARANCE</string>
	<string name="design">Design</string>
	<string name="follow_system">Follow system</string>
	<string name="light_mode">Light Mode</string>
	<string name="dark_mode">Dark Mode</string>
	<string name="arguments_category">ARGUMENTS</string>
	<string name="show_sums">Show sums</string>
	<string name="show_sums_summary">Show sums of negatives and positives arguments</string>
	<string name="sort_on_insert">Sort arguments automatically</string>
	<string name="sort_on_insert_summary">Arguments are automatically sorted by weight when added</string>
	<string name="import_export_category">IMPORT/EXPORT DATABASE</string>
	<string name="import_database">Import database</string>
	<string name="import_database_summary">From a previous export</string>
	<string name="cant_find_db">Cannot find database</string>
	<string name="import_failed">Import failed: %1$s</string>
	<string name="import_failed_unknown">Import failed for unknown reasons</string>
	<string name="importing">Importing…</string>
	<string name="import_successful">Import successful</string>
	<string name="export_database">Export database</string>
	<string name="export_database_summary">Into an external file</string>
	<string name="exporting">Exporting…</string>
	<string name="export_successful">Export successful</string>
	<string name="export_failed">Export failed</string>
	<string name="save_as">Save to Downloads as:</string>
	<string name="enter_file_name">Enter a file name</string>
</resources>
