<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:clipToPadding="false"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:orientation="vertical">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:text="@string/design"/>
		<Spinner
			android:id="@+id/design"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="32dp"/>
		<android.support.v7.widget.SwitchCompat
			android:id="@+id/show_sums"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="32dp"
			android:text="@string/show_sums"/>
		<android.support.v7.widget.SwitchCompat
			android:id="@+id/sort_on_insert"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="32dp"
			android:text="@string/sort_on_insert"/>
	</LinearLayout>
</ScrollView>
